k8s-local/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coarlumini-ingress
  namespace: coarlumini
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: coarlumini.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coarlumini-frontend-service
                port:
                  number: 80
    - host: api.coarlumini.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coarlumini-backend-service
                port:
                  number: 80
